Provide MonumentaRedisSync with the set of available content IDs (#79)